crates/apollo-compiler/test_data/diagnostics/0041_subscription_operation_with_undefined_fields.txt
Error: type `Subscription` does not have a field `undefinedSubscriptionField`
   ╭─[0041_subscription_operation_with_undefined_fields.graphql:2:3]
   │
 2 │   undefinedSubscriptionField
   │   ─────────────┬────────────  
   │                ╰────────────── field `undefinedSubscriptionField` selected here
   │ 
 5 │ type Subscription {
   │      ──────┬─────  
   │            ╰─────── type `Subscription` defined here
   │ 
   │ Note: path to the field: `subscription sub → undefinedSubscriptionField`
───╯

